Added custom structural directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
             {{ odd }}
           </li>
         </div>
-        <div *ngIf="!onlyOdd">
+        <!-- <div *ngIf="!onlyOdd">
           <li class="list-group-item"
           [ngClass]="{even: even % 2 !== 0}"
           [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'black' : transparent}"
@@ -29,7 +29,15 @@
               {{ even }}
             </li>  
           </div>
-        </ng-template>
+        </ng-template> -->
+        <div *appUnless="onlyOdd">
+          <li class="list-group-item"
+          [ngClass]="{even: even % 2 !== 0}"
+          [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'black' : transparent}"
+          *ngFor="let even of evenNumbers">
+            {{ even }}
+          </li>
+        </div>
       </ul>
       <p appBasicHighlight>Style me with basic directive</p>
       <p [appBetterHighlight]="'purple'" defaultColor="grey">Style me with better directive</p>
